# cpx.datei-typ

./: CXP-2.0-PLAN.md  CXP_TOKEN_SAVINGS_REPORT.md  Cargo.toml  EMBEDDINGS_USAGE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  QUERY_CHECKLIST.md  QUERY_FLOW.txt  QUERY_HELP.txt  QUERY_OUTPUT_EXAMPLE.txt  QUERY_QUICKSTART.md  QUERY_SUMMARY.md  QUERY_USAGE.md  QUICK_TEST_GUIDE.md  README.md  SMART_SCANNER_PLAN.md  TESTING.md  TEST_REPORT.md  TEST_SUMMARY.md  cpx.newdatatyp.md  test_migration.sh  test_runner.sh
cxp-cli/: Cargo.toml  README_MIGRATE.md
cxp-cli/src/: main.rs  migrate.rs
cxp-core/: Cargo.toml  EXTENSIONS.md  MULTIMODAL_README.md  README.md  SEARCH.md
cxp-core/examples/: contextai_example.rs  extension_integration.rs  verify_migration.rs
cxp-core/src/: chunker.rs  compress.rs  contextai.rs  dedup.rs  embeddings.rs  embeddings_tract.rs  error.rs  extensions.rs  format.rs  global_index.rs  index.rs  lib.rs  manager.rs  manifest.rs  multimodal.rs  recursive.rs  recursive_builder.rs  semantic.rs  token.rs  unified_index.rs
cxp-core/src/scanner/: config.rs  custom_config.rs  ignore.rs  mod.rs  profile.rs  profile_detector.rs  relevance.rs  tier.rs
cxp-core/tests/: README.md  contextai_integration_test.rs  index_integration_test.rs  integration_test.rs  recursive_cxp_tests.rs  token_savings_benchmark.rs  unified_index_test.rs
docs/: CONTEXTAI_EXTENSION.md  CONTEXTAI_QUICK_START.md  SQLITE_MIGRATION_GUIDE.md
