[workspace]
resolver = "2"
members = ["cxp-core", "cxp-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Einar Jaeger"]
license = "Proprietary"
repository = "https://github.com/einarjaeger/cxp"
description = "CXP - Universal AI Context Format"

[workspace.dependencies]
# Core
fastcdc = "3.1"
zstd = "0.13"
sha2 = "0.10"
zip = "2.2"
rayon = "1.10"

# Serialization
flatbuffers = "24.12"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.42", features = ["full"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# File System
walkdir = "2.5"
glob = "0.3"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
hex = "0.4"
