[package]
name = "cxp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CXP CLI - Build and query CXP files"

[[bin]]
name = "cxp"
path = "src/main.rs"

[features]
default = ["contextai"]
embeddings = ["cxp-core/embeddings"]
search = ["cxp-core/search"]
multimodal = ["cxp-core/multimodal"]
contextai = ["cxp-core/contextai"]
full = ["embeddings", "search", "multimodal", "contextai"]

[dependencies]
cxp-core = { path = "../cxp-core" }

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Error Handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Misc
chrono.workspace = true

# Serialization
serde_json.workspace = true

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
